# akshare-one-enhanced

./: .gitignore  BAOSTOCK_FINANCIAL_REPORT.md  CHANGELOG.md  CODEBASE_SUMMARY.md  DATA_SOURCE_MIGRATION_GUIDE.md  DEFAULT_DATA_SOURCE_CHANGELOG.md  DOCS_INDEX.md  DOCS_REFACTORING_SUMMARY.md  DOCUMENTATION_GAP_ANALYSIS.md  DOCUMENTATION_UPDATE_COMPLETE.md  EASTMONEY_API_ISSUE.md  FINAL_ACCEPTANCE_REPORT.md  FINAL_COMPLETION_REPORT.md  FINAL_DOCUMENTATION_COMPLETE_REPORT.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  FIX_PROGRESS_ROUND2.md  IMPLEMENTATION_SUMMARY.md  NON_NETWORK_FIXES_COMPLETE.md  NON_NETWORK_FIX_PLAN.md  P0_P1_P2_FIX_SUMMARY.md  PRODUCTIZATION_CHECK_REPORT.md  PRODUCT_READINESS_STATUS.md  PROJECT_SUMMARY.md  README.md  README_zh.md  REGRESSION_TEST_SUMMARY.md  ROUND4_FINAL_COMPLETION.md  SOLUTION_SUMMARY.md  SUMMARY_BAOSTOCK_FINANCIAL.md  TEST_FIX_COMPLETE_REPORT.md  TEST_FIX_REPORT.md  TEST_RESULTS.md  TEST_RUN_STATUS.md  TICKFLOW_INTEGRATION.md  TICKFLOW_TEST_REPORT.md  TIMEOUT_SETUP_COMPLETE.md  USAGE_EXAMPLES.md  balance_sheet_600519.csv  cashflow_600519.csv  (+27 more)
.github/workflows/: ci.yml  standardization.yml  test.yml
.kiro/specs/: missing-interfaces-analysis.md
.opencode/: package-lock.json
archive/: CONTRIBUTING.md  EXAMPLES_AND_TUTORIALS_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_P0_P1_FIX_COMPLETE.md  PRODUCTIZATION_COMPLETE.md  RELEASE_NOTES_COMPLETION_REPORT.md  TEST_FAILURE_ANALYSIS.md  TIERED_COVERAGE_IMPLEMENTATION_REPORT.md  analyze_lixinger_apis.py  check_bond_columns.py  failed_tests_summary.txt  field_whitelist_example.json  run_all_tests.py  run_performance_tests.sh  test_error_codes.py  verify_alpha_v1.py  verify_bond_v1.py  verify_cache.py  verify_error_codes.py  verify_final_v2.py  verify_full_compat.py  verify_fundamentals.py  verify_sentiment_v1.py
archive/archive/: check_date_ranges.py  mark_network_tests.py  test_timeout_verification.sh
archive/output/: 000001_daily_2024.xlsx  600000_statistics_2024.csv  600519_2024.json  600519_2024.xlsx  market_overview_20260407_224810.csv  market_overview_20260408_085859.csv
docs/: AKSHARE_COMPATIBILITY.md  API_CONTRACT_UPDATE_SUMMARY.md  API_FIELD_CONTRACT_COMPLETION_REPORT.md  API_MAP_COMPLETION_REPORT.md  BADGES.md  BAOSTOCK_COMPLETE_IMPLEMENTATION.md  BAOSTOCK_GUIDE.md  BAOSTOCK_MARKET_IMPLEMENTATION.md  CI_GUIDE.md  CI_QUICK_REFERENCE.md  CI_README.md  CI_VALIDATION_REPORT.md  COMPATIBILITY_CONTRACT.md  FAQ.md  FIELD_STANDARDIZATION_REPORT.md  MINIMUM_TEST_SUITE.md  PERFORMANCE_TEST_REPORT.md  PERFORMANCE_TEST_VALIDATION.md  PRODUCT_READINESS_PLAN.md  QUICKSTART_TEST_REPORT.md  RELEASE_PROCESS.md  TEST_TIMEOUT_CONFIG.md  TUSHARE_COMPLETE_INTEGRATION.md  TUSHARE_INTEGRATION.md  UPGRADE_GUIDE.md  VERSION_COMPATIBILITY_TESTING.md  VERSION_MATRIX.md  analyst_dictionary.md  api_reference.md  baostock_financial_usage.md  baostock_macro_implementation.md  blockdeal_dictionary.md  bond_dictionary.md  code-quality-check-summary.md  code-review-checklist.md  coverage-adjustment-summary.md  coverage-strategy.md  data_dictionary.json  disclosure_dictionary.md  efinance-complete-integration-report.md  (+47 more)
docs/advanced/: cache.md  multi-source.md  performance.md
docs/api/: CHANGELOG.md  FINAL_REFACTORING_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  blockdeal.md  check_duplicates.py  (+17 more)
examples/: README.md  alpha_example.py  analyst_example.py  baostock_example.py  baostock_macro_example.py  baostock_market_example.py  blockdeal_example.py  board_example.py  bond_example.py  date_example.py  disclosure_example.py  efinance_datasource_examples.py  efinance_examples.py  error_codes_demo.py  error_handling_example.py  esg_example.py  exception_usage_example.py  field_standardization_demo.py  field_validator_example.py  fundflow_example.py  futures_example.py  goodwill_example.py  hkus_example.py  indicators_example.py  info_example.py  insider_example.py  ipo_example.py  lhb_example.py  limitup_example.py  macro_example.py  margin_example.py  monitoring_example.py  news_example.py  northbound_example.py  options_example.py  performance_example.py  pledge_example.py  restricted_example.py  sentiment_example.py  shareholder_example.py  (+4 more)
mapping_tables/: underlying_patterns.json
mappings/: etf_code_to_name.json  index_code_to_name.csv  industry_code_to_name.csv  industry_code_to_name.json  mapping_utils.py  option_symbol_to_name.json  option_underlying_patterns.json  stock_code_to_name.json
output/: 000001_daily_2024.xlsx  000001_daily_recent.xlsx  600000_daily_2024.csv  600000_daily_recent.csv  600000_statistics_2024.csv  600000_with_indicators_2024.csv  600519_2024.csv  600519_2024.json  600519_2024.xlsx  market_overview_20260408_071946.csv
scripts/: check_chinese_comments.py  check_stock_codes.py  check_tiered_coverage.py  fix_code_quality.py  fix_invalid_source_tests.py  fix_non_network_failures.py  monitor_data_sources.py  prepare-release.sh  quickstart.bat  quickstart.sh  run_regression_tests.sh  setup_regression_tests.sh  test_akshare_versions.py  validate_ci_config.py  verify_installation.py
src/: efinance_wrapper.py
tests/: FINAL_DELIVERABLES.md  FRAMEWORK_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  MOCK_DATA_IMPLEMENTATION_SUMMARY.md  NETWORK_TESTING.md  NUMERIC_TYPES_CONTRACT_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  README_MOCK_DATA.md  TASK_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  TEST_STABILITY.md  conftest.py  conftest.py.bak  data_dictionary_generator.py  provider_tester.py  run_offline_tests.sh  standardization_check.py  test_akshare_compat.py  test_akshare_functions_p1.py  test_akshare_functions_p2.py  test_akshare_version_compat.py  test_api_contract.py  test_api_field_contracts.py  test_api_field_contracts_with_mocks.py  test_api_map_contract.py  test_backup_providers.py  test_baostock_integration.py  test_base_provider.py  test_base_provider_extended.py  test_blockdeal.py  test_blockdeal_integration.py  test_blockdeal_with_mocks.py  test_bond.py  test_config.py  test_contract_framework.py  test_data_filter.py  test_disclosure.py  test_disclosure_base.py  test_disclosure_contract.py  (+64 more)
(+929 files in other folders)
