[project]
name = "akshare-one"
version = "0.5.0"
description = "Standardized interface for Chinese financial market data, built on AKShare with unified data formats and simplified APIs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "akshare>=1.17.80,<2.0.0",
    "cachetools>=5.5.0,<6.0.0",
    "pandas>=1.5.0,<3.0.0",
    "requests>=2.28.0,<3.0.0",
]
license = "MIT"
keywords = ["akshare", "financial-data", "stock-data", "quant", "chinese-market", "a-share"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

[project.scripts]
akshare-one-mcp = "akshare_one_mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/zwldarren/akshare-one"
Repository = "https://github.com/zwldarren/akshare-one.git"

[project.optional-dependencies]
talib = ["ta-lib>=0.6.4,<1.0.0"]
mcp = [
    "fastmcp>=2.11.3,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.15",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "pytest-rerunfailures>=16.1",
    "pytest-snapshot>=0.9.0",
    "pytest-timeout>=2.3.1",
    "responses>=0.25.0",
    "psutil>=5.9.0",
    "ruff>=0.12.1",
    "ty>=0.0.10",
    "types-cachetools>=6.1.0.20250717",
    "types-requests>=2.32.4.20250809",
    "types-psutil>=5.9.5.20240516",
    "fastmcp>=2.11.3",
    "pydantic>=2.0.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akshare_one", "src/akshare_one_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_functions = "test_*"
# Note: --reruns and --reruns-delay require pytest-rerunfailures plugin
# If plugin is not installed, pytest will warn but continue without reruns
addopts = "-v --cov=akshare_one --cov-report=term-missing"
timeout = 60  # 默认超时 60 秒
timeout_method = "signal"  # 使用 signal 方法实现超时
markers = [
    "contract: Mark tests as contract tests",
    "integration: Mark tests as integration tests (require network)",
    "slow: Mark tests as slow running",
    "performance: Mark tests as performance tests",
    "flaky: Mark tests as flaky (inherently unstable, needs special handling)",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    "E501",  # Line too long (keep for readability)
    "E402",  # Module level import not at top (sometimes needed for optional imports)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "B018",  # Useless expression (common in tests)
    "SIM115",  # Use contextlib.suppress (not always better in tests)
]
"src/akshare_one/modules/*/__init__.py" = [
    "F401",  # Unused import (re-exports)
]

[tool.coverage.run]
source = ["src/akshare_one"]
omit = [
    "src/akshare_one/mcp/*",  # Optional MCP server
    "src/akshare_one/*/__init__.py",
    "src/akshare_one/logging_config.py",  # Logging configuration
    "src/akshare_one/health/*",  # Health check utilities
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 30  # Progressive target: start at 30%, gradually increase
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "except ImportError:",
    "if TYPE_CHECKING:",
]

# Note: Coverage tiered thresholds strategy
# The current fail_under is set to a realistic 30% baseline (up from current 25.51%).
#
# For future improvements, consider implementing tiered coverage using a custom script:
# - Core modules (client.py, modules/base.py, modules/factory_base.py): target 75%
# - Important modules (etf, bond, futures, index, financial, historical, realtime): target 60%
# - Extension modules (all others): target 50%
#
# Implementation options:
# 1. Use coverage.py's per-module coverage reporting
# 2. Create a CI script that checks coverage per module group
# 3. Use tools like coverage-threshold or pytest-cov's advanced features
